<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
        <modelVersion>4.0.0</modelVersion>
	<artifactId>springboot</artifactId>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.1.1.RELEASE</version>
	</parent>

	<dependencies>
	        <dependency>
		        <groupId>org.springframework.boot</groupId>
		        <artifactId>spring-boot-starter-web</artifactId>
	        </dependency>
		<dependency>
                        <groupId>org.postgresql</groupId>
                        <artifactId>postgresql</artifactId>
                </dependency>
		<dependency>
                        <groupId>com.zaxxer</groupId>
                        <artifactId>HikariCP</artifactId>
                </dependency>
		<dependency>
                        <groupId>javax.annotation</groupId>
                        <artifactId>javax.annotation-api</artifactId>
                </dependency>
        </dependencies>
	
	<build>
	        <plugins>
		        <plugin>
			        <groupId>org.springframework.boot</groupId>
	      		        <artifactId>spring-boot-maven-plugin</artifactId>
		        </plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
                                        <release>11</release>
                                </configuration>
                        </plugin>
	        </plugins>
        </build>
</project>
